# conf2levels

./: CHANGELOG.md  README.rst  pyproject.toml  tox.ini
conf2levels/: __init__.py
tests/: test_conf2levels.py
