[tool.poetry]
name = "conf2levels"
version = "0.5.0"
description = "A configuration reader which reads values stored in two key levels. The first key level is named “section” and the second level “key”."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
mypy = "^1"
tox = "^4"
ruff = "^0"

[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"
